# mfa-agent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  net.louib.mfa-agent.yaml
scripts/: start_dev_proxy.sh  start_proxy.sh
src/: agent_window.rs  api.rs  app.rs  bluetooth.rs  bt_server.rs  build.rs  config.rs  connection.rs  consts.rs  crypto.rs  event.rs  hid.rs  logger.rs  main.rs  numpad.rs  proxy_window.rs  secrets.rs  tcp.rs  unlock_window.rs  utils.rs  widgets.rs
src/secrets_window/: imp.rs  mod.rs  template.ui
src/ui/: agent_window.ui  keypad.ui  main.ui  proxy_window.ui  resources.gresource.xml  search.ui  style-dark.css  style-hc-dark.css  style-hc.css  style.css  unlock.ui  unlock_window.ui  window.ui
src/ui/resources/: resources.gresource.xml
src/widgets/: proxy_window.rs  unlock_window.rs
