[package]
name = "mfa-agent"
authors = ["louib <code@louib.net>"]

repository = "https://github.com/louib/mfa-agent/"
description = " Multi-Factor authentication agent for Linux."

version = "0.0.1"
edition = "2018"
rust-version = "1.60"

keywords = [
  "linux",
  "mfa",
  "bluetooth",
]

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.4"
# TODO hide this behind an option. Same thing with messagepack.
serde_json = "1.0"

# Logging libs
log = "0.4"
simple-logging = "2.0"

# GTK related libs
gtk = { version = "0.4", package = "gtk4" }
gio = { version = "0.15", features = ["v2_50"] }
glib = "0.15"
gtk-macros = "0.3"
# libhandy = "0.9"
# vgtk = "0.3"

tokio = { version = "1.1", features = ["full"] }
bluer = { version = "0.15", features = ["bluetoothd"] }

futures = "0.3"
async-std = "1.11.0"

clap = { version = "3", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
# Needed in the build dependencies to compile the gresources
gtk = { version = "0.4", package = "gtk4" }
